@@ -10,10 +10,11 @@ Change some more of the timing for the idle/throttle speed code
 
 Updated to zlib 1.2.10
 
-*** ROM SUPPORT *** Thanks to Flipprojets
+*** ROM SUPPORT *** Thanks to Flipprojets.fr
 Clones:
 Amazon Hunt II (French Free Play)
 Amazon Hunt III (French Free Play)
+Amazon Hunt III (rev. 1 French)
 Amazon Hunt III (rev. 1 French Free Play)
 Arena (Free Play)
 Arena (French Free Play)
@@ -29,6 +30,7 @@ Bone Busters Inc. (Free Play)
 Bone Busters Inc. (French Free Play)
 Bone Busters Inc. (German Free Play)
 Bounty Hunter (Free Play)
+Bounty Hunter (German)
 Bounty Hunter (German Free Play)
 Caveman (Evolution, unofficial MOD)
 Chicago Cubs Triple Play (Free Play)
@@ -39,7 +41,9 @@ Diamond Lady (German Free Play)
 Excalibur (Free Play)
 Excalibur (French Free Play)
 Genesis (Free Play)
+Genesis (French)
 Genesis (French Free Play)
+Genesis (German)
 Genesis (German Free Play)
 Gold Wings (Free Play)
 Gold Wings (French Free Play)
@@ -48,7 +52,9 @@ Haunted House (rev. 3 unofficial MOD)
 Haunted House (rev. 3 unofficial MOD, LED)
 Haunted House (rev. 3 unofficial MOD, LED+Secret Tunnel)
 Hollywood Heat (Free Play)
+Hollywood Heat (French)
 Hollywood Heat (French Free Play)
+Hollywood Heat (German)
 Hollywood Heat (German Free Play)
 Hot Shots (Free Play)        (enabled by setting the maximum number of credits to 20 (both DIP 15 and 16 ON))
 Hot Shots (French Free Play) (enabled by setting the maximum number of credits to 20 (both DIP 15 and 16 ON))
@@ -63,13 +69,16 @@ MotorDome (German)
 Night Moves (Free Play)
 Pink Panther (sound correction fix)
 Raven (Free Play)
+Raven (German)
 Raven (German Free Play)
 Raven (rev. 1 Free Play)
 Robo-War (Free Play)
 Robo-War (French Free Play)
 Rock (Free Play)
+Rock (German)
 Rock (German Free Play)
 Rock Encore (Free Play)
+Rock Encore (German)
 Rock Encore (German Free Play)
 Spring Break (Free Play)
 Spring Break (French Free Play)
@@ -77,6 +86,7 @@ Spring Break (German Free Play)
 Spring Break (rev. 1 Free Play)
 Spring Break (single ball game, Free Play)
 Tag-Team Pinball (Free Play)
+Tag-Team Pinball (German)
 Tag-Team Pinball (German Free Play)
 Tag-Team Pinball (rev.2 Free Play)
 TX-Sector (Free Play)
